Shear in Dopesheet causes crash #68322

Closed
opened 2019-08-06 17:41:32 +02:00 by William Reynish · 6 comments

System Information
Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics 640 Intel Inc. 4.1 INTEL-12.8.38

Blender Version
Broken: version: 2.81 (sub 1), branch: master, commit date: 2019-08-05 09:47, hash: 9620b8f6bb
Worked: (never?)

Short description of error
When you execute the Shear operator in the Dopesheet, Blender crashes immediately

Exact steps for others to reproduce the error

  • Insert a keyframe
  • Open the Dopesheet
  • Open the Operator Search popup
  • Type in 'shear' and hit return
  • Crash

Probably, since it doesn't appear to work, this should not be available in the Dopesheet.

**System Information** Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics 640 Intel Inc. 4.1 INTEL-12.8.38 **Blender Version** Broken: version: 2.81 (sub 1), branch: master, commit date: 2019-08-05 09:47, hash: `9620b8f6bb` Worked: (never?) **Short description of error** When you execute the Shear operator in the Dopesheet, Blender crashes immediately **Exact steps for others to reproduce the error** - Insert a keyframe - Open the Dopesheet - Open the Operator Search popup - Type in 'shear' and hit return - Crash Probably, since it doesn't appear to work, this should not be available in the Dopesheet.

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Sybren A. Stüvel self-assigned this 2019-08-08 17:45:16 +02:00

Confirmed. Also crashes on 2.79.

Confirmed. Also crashes on 2.79.

This issue was referenced by e1665905df

This issue was referenced by e1665905dff1e19c2e40fc1df716de572b1e1fb2

A fix is available in D5440, waiting for review.

A fix is available in [D5440](https://archive.blender.org/developer/D5440), waiting for review.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68322
No description provided.